# AlgoTradeWithPaython

./: README.md  main.py  main_claude.py  pyproject.toml  requirements.txt
docs/: CBase_Documentation.md
src/: __init__.py
src/analysis/: __init__.py  bar_utils.py  zigzag_analyzer.py
src/core/: __init__.py  base.py
src/data/: __init__.py  excel_handler.py  file_utils.py  ini_file.py  txt_file_reader.py  txt_file_writer.py
src/data_management/: data_manager.py
src/indicators/: __init__.py  indicator_manager.py
src/portfolio/: __init__.py  asset_manager.py
src/risk_management/: __init__.py  take_profit_stop_loss.py
src/statistics/: __init__.py  statistics_manager.py
src/system/: __init__.py  backtest_engine.py  composite_system_manager.py  shared_memory.py  status.py  system_wrapper.py
src/time_management/: __init__.py  time_filter.py  time_utils.py
src/trading/: __init__.py  bakiye.py  flags.py  kar_al_zarar_kes.py  kar_zarar.py  komisyon.py  signals.py  trader.py
src/utils/: __init__.py  lists.py  utils.py
tests/: test_analysis.py  test_data_management.py  test_portfolio.py  test_risk_management.py  test_statistics.py  test_system.py  test_time_management.py  test_trading.py
tests/test_core/: test_base.py
tests/test_indicators/: __init__.py  test_indicator_manager.py
tests/test_utils/: test_utils.py
